replace angular flex layout

--- a/apps/angular-test-app/src/app/components/avatar-demo/avatar-demo.component.html
+++ b/apps/angular-test-app/src/app/components/avatar-demo/avatar-demo.component.html
@@ -1,27 +1,27 @@
 <h1 class="uxg-display-3">Avatars</h1>
 <h5 class="uxg-h5">Default Avatar</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-avatar large></uxg-avatar>
   <uxg-avatar></uxg-avatar>
   <uxg-avatar dense></uxg-avatar>
 </div>
 
 <h5 class="uxg-h5">Colored Avatar</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-avatar color="primary"></uxg-avatar>
   <uxg-avatar color="accent"></uxg-avatar>
   <uxg-avatar></uxg-avatar>
 </div>
 
 <h5 class="uxg-h5">Avatar with Initials</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-avatar large name="Raya Hristova"></uxg-avatar>
   <uxg-avatar name="rhristova"></uxg-avatar>
   <uxg-avatar dense name="Raya"></uxg-avatar>
 </div>
 
 <h5 class="uxg-h5">Avatar with Initials and Colors</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-avatar color="initials" name="RB"></uxg-avatar>
   <uxg-avatar color="initials" name="RH"></uxg-avatar>
   <uxg-avatar color="initials" name="TT"></uxg-avatar>
@@ -31,7 +31,7 @@
 </div>
 
 <h5 class="uxg-h5">Gravatars</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-avatar gravatarEmail="default"></uxg-avatar>
   <uxg-avatar gravatarEmail="razvan.bordeanu@gmail.com"></uxg-avatar>
   <uxg-avatar gravatarEmail="thomas.talbot@gmail.com"></uxg-avatar>
@@ -44,7 +44,7 @@
 </div>
 
 <h5 class="uxg-h5">Avatar with Image</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-avatar large>
     <ng-template uxgImageAvatar>
       <img src="https://randomuser.me/api/portraits/women/17.jpg" />
