--- a/apps/angular-test-app/src/app/components/banner-demo/banner-demo.component.html
+++ b/apps/angular-test-app/src/app/components/banner-demo/banner-demo.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column">
+<div class="flex-col">
   <h5 class="uxg-h5">Default Banner</h5>
   <uxg-banner [bannerData]="exampleBannerData"></uxg-banner>
   <br /><br /><br />
