--- a/apps/angular-test-app/src/app/components/entity-menu-demo/entity-menu-demo.component.html
+++ b/apps/angular-test-app/src/app/components/entity-menu-demo/entity-menu-demo.component.html
@@ -25,7 +25,7 @@
 
       <mat-checkbox class="example-margin" (change)="updateTemplate($event)">No data limit</mat-checkbox>
     </div>
-    <div class="description" fxLayout="column" *ngIf="actionDescription">
+    <div class="flex-col description" *ngIf="actionDescription">
       <h3>Output:</h3>
       <p>
         {{ actionDescription }}
