--- a/libs/angular-components/toaster/src/toaster.component.html
+++ b/libs/angular-components/toaster/src/toaster.component.html
@@ -1,4 +1,4 @@
-<div fxLayoutAlign="center center" class="icon-container">
+<div class="justify-center align-center icon-container">
   <mat-icon dense *ngIf="toast.config.type === 'success'">check_circle_outline</mat-icon>
   <mat-icon dense *ngIf="toast.config.type === 'error'">error_outline</mat-icon>
   <mat-icon class="material-icons-outlined" dense *ngIf="toast.config.type === 'warning'">report_problem</mat-icon>
