--- a/apps/angular-test-app/src/app/components/repeater-demo/repeater-demo.component.html
+++ b/apps/angular-test-app/src/app/components/repeater-demo/repeater-demo.component.html
@@ -15,27 +15,27 @@
   <mat-expansion-panel>
     <mat-expansion-panel-header aria-label="Expansion panel header"> </mat-expansion-panel-header>
 
-    <div fxLayout="row" fxLayoutAlign="start start" class="configuration">
-      <div class="orientation-area" fxLayout="column" fxLayoutAlign="start start">
+    <div class="flex-row justify-start align-start configuration">
+      <div class="flex-col justify-start align-start orientation-area">
         <h3>Orientation</h3>
-        <mat-radio-group fxLayout="column" [(ngModel)]="orientationExample">
+        <mat-radio-group class="flex-col" [(ngModel)]="orientationExample">
           <mat-radio-button value="horizontal">Horizontal</mat-radio-button>
           <mat-radio-button value="vertical">Vertical</mat-radio-button>
         </mat-radio-group>
       </div>
 
-      <div class="orientation-area" fxLayout="column" fxLayoutAlign="start start">
+      <div class="flex-col justify-start align-start orientation-area">
         <h3>Selection</h3>
-        <mat-radio-group fxLayout="column" [(ngModel)]="multiselectExample">
+        <mat-radio-group class="flex-col" [(ngModel)]="multiselectExample">
           <mat-radio-button [value]="false">Single select</mat-radio-button>
           <mat-radio-button [value]="true">Multi select</mat-radio-button>
         </mat-radio-group>
       </div>
 
-      <div class="component-area" fxLayout="column" fxLayoutAlign="start start">
+      <div class="flex-col justify-start align-start component-area">
         <h3>Component</h3>
         <mat-select
-          fxLayout="column"
+          class="flex-col"
           [(ngModel)]="currentTemplate"
           [value]="currentTemplate"
           [compareWith]="compareWith"
@@ -47,14 +47,14 @@
         </mat-select>
       </div>
 
-      <div class="component-fields" fxLayout="column" fxLayoutAlign="start start">
+      <div class="flex-col justify-start align-start component-fields">
         <h3>Component Fields</h3>
         <form [formGroup]="repeaterConfigurationForm" class="config">
           <ffdc-field-matcher formControlName="templateFieldsConfig" [fields]="columnsExample"></ffdc-field-matcher>
         </form>
       </div>
 
-      <div fxLayout="column" *ngIf="actionDescription" class="interaction-information">
+      <div *ngIf="actionDescription" class="flex-col interaction-information">
         <h3>Output:</h3>
         {{ actionDescription }}
       </div>
