--- a/apps/angular-test-app/src/app/components/user-profile-menu-demo/user-profile-menu-demo-component.component.html
+++ b/apps/angular-test-app/src/app/components/user-profile-menu-demo/user-profile-menu-demo-component.component.html
@@ -1,5 +1,5 @@
 <h5 class="uxg-h5">Default Avatar</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-user-profile-menu [user]="vinh" headerType="hero"></uxg-user-profile-menu>
   <uxg-user-profile-menu color="primary" [user]="vinh" headerType="hero"></uxg-user-profile-menu>
   <uxg-user-profile-menu color="accent" [user]="vinh" headerType="hero"></uxg-user-profile-menu>
@@ -18,7 +18,7 @@
 </div>
 
 <h5 class="uxg-h5">Avatar with actions</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-user-profile-menu [user]="vinh">
     <ng-template uxgUserProfilePanelActions>
       <button mat-flat-button color="primary" dense>
@@ -48,7 +48,7 @@
 </div>
 
 <h5 class="uxg-h5">Avatar with contents and actions and details</h5>
-<div fxLayout class="example-row">
+<div class="flex-row example-row">
   <uxg-user-profile-menu color="initials" [user]="vinh" headerType="hero">
     <ng-template uxgUserProfilePanelDetails>
       <div class="uxg-subtitle-1">Employee of the month</div>
