--- a/apps/angular-test-app/src/app/components/vector-map-demo/vector-map-demo.component.html
+++ b/apps/angular-test-app/src/app/components/vector-map-demo/vector-map-demo.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between" fxFlex="fill">
+<div class="flex-row flex-col-xs fill justify-between">
   <div fxFlex="49" fxFlex.xs="100">
     <uxg-vector-map title="Vector Map with Views" [dataSource]="viewMapDataSource"></uxg-vector-map>
   </div>
