--- a/libs/angular-components/wizard/src/wizard.component.html
+++ b/libs/angular-components/wizard/src/wizard.component.html
@@ -1,4 +1,4 @@
-<div fxFlexFill fxLayout="row" fxLayout.xs="column" class="uxg-wizard">
+<div class="flex-row flex-col-xs fill uxg-wizard">
   <div fxFlex="66" fxFlex.xs="0"></div>
   <div fxHide.xs fxFlex class="uxg-wizard-right-panel">
     <div *ngIf="showCloseButton" class="close-button">
@@ -11,12 +11,12 @@
     <ng-content select="uxg-wizard-title"></ng-content>
   </h4>
 
-  <div fxHide fxShow.xs fxLayout="column" class="uxg-wizard-timeline-xs">
-    <div fxLayout="row" fxLayoutAlign="space-around">
+  <div fxHide fxShow.xs class="flex-col uxg-wizard-timeline-xs">
+    <div class="flex-row justify-around">
       <div class="step active">
         <div>{{ navService.currentPage ? pageCollection.getPageIndex(navService.currentPage) + 1 : 1 }}</div>
       </div>
-      <div fxFlex="80" fxLayout="column" fxLayoutAlign="space-around stretch">
+      <div fxFlex="80" class="flex-col justify-around align-stretch">
         <div class="step-info-container">
           <div class="step-title uxg-h5">
             <ng-template [ngTemplateOutlet]="navService.currentPageTitle"></ng-template>
@@ -35,8 +35,7 @@
   </div>
 
   <div
-    class="uxg-wizard-container mat-elevation-z4"
-    fxLayout="column"
+    class="flex-col uxg-wizard-container mat-elevation-z4"
     fxFlex.xs="100"
     (touchstart)="swipe($event, 'start')"
     (touchend)="swipe($event, 'end')"
@@ -54,7 +53,7 @@
         <ng-content select="uxg-wizard-button"></ng-content>
 
         <div fxHide fxShow.xs class="dot-navigation">
-          <div fxFlex="70" fxLayout="row" fxLayoutAlign="center" class="dot-navigation-flex">
+          <div fxFlex="70" class="flex-row justify-center dot-navigation-flex">
             <ng-container *ngFor="let page of pages">
               <div
                 class="dot"
@@ -70,8 +69,8 @@
     </div>
   </div>
 
-  <div fxHide.xs fxLayout="row" class="uxg-wizard-timeline">
-    <div fxFlex="20" fxLayout="column" fxLayoutAlign="space-around center">
+  <div fxHide.xs class="flex-row uxg-wizard-timeline">
+    <div fxFlex="20" class="flex-col justify-around align-center">
       <div class="timeline-progress-bar" [ngStyle]="{ 'height.%': (100 * (pages.length - 1)) / pages.length }">
         <span
           id="dp-create-project-wizard-timeline-progress"
@@ -98,11 +97,10 @@
         </div>
       </ng-container>
     </div>
-    <div fxFlex="80" fxLayout="column" fxLayoutAlign="space-around stretch">
+    <div fxFlex="80" class="flex-col justify-around align-stretch">
       <ng-container *ngFor="let page of pages">
         <div
-          fxLayout="column"
-          class="step-info-container"
+          class="flex-col step-info-container"
           [ngClass]="{
             active: page.current,
             disabled: page.disabled
