--- a/libs/angular-theme/_index.scss
+++ b/libs/angular-theme/_index.scss
@@ -8,6 +8,8 @@
 @forward './lib/core/style/spacing';
 @forward './lib/core/layout/breakpoints';
 
+@forward './lib/flex/flex-base';
+
 @use './lib/avatar/avatar-theme' as avatar;
 @use './lib/icon/icon-theme' as icon;
 @use './lib/link/link-theme' as link;
