--- a/libs/angular-components/wizard/src/wizard.component.html
+++ b/libs/angular-components/wizard/src/wizard.component.html
@@ -1,6 +1,6 @@
 <div class="flex-row flex-col-xs fill uxg-wizard">
   <div class="filler-row"></div>
-  <div class="flex-1 hide-xs uxg-wizard-right-panel">
+  <div class="hide-xs flex-1 uxg-wizard-right-panel">
     <div *ngIf="showCloseButton" class="close-button">
       <button mat-icon-button (click)="navService.cancel()">
         <mat-icon aria-hidden="false" aria-label="Close">clear</mat-icon>
@@ -36,7 +36,7 @@
 
   <div
     class="flex-col uxg-wizard-container mat-elevation-z4"
-    fxFlex.xs="100"
+    [class.xs]="(xs | async)?.matches"
     (touchstart)="swipe($event, 'start')"
     (touchend)="swipe($event, 'end')"
   >
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-  <div class="flex-row hide-xs uxg-wizard-timeline">
+  <div class="hide-xs flex-row uxg-wizard-timeline">
     <div class="flex-col flex-20 justify-around align-center">
       <div class="timeline-progress-bar" [ngStyle]="{ 'height.%': (100 * (pages.length - 1)) / pages.length }">
         <span
