--- a/apps/angular-test-app/src/app/components/skeleton-demo/skeleton-demo.component.html
+++ b/apps/angular-test-app/src/app/components/skeleton-demo/skeleton-demo.component.html
@@ -11,19 +11,19 @@
 <mat-card>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image">
-      <uxg-skeleton-text animated></uxg-skeleton-text>
+      <uxg-skeleton-text style="height: 40px"></uxg-skeleton-text>
     </div>
-    <mat-card-title><uxg-skeleton-text animated></uxg-skeleton-text></mat-card-title>
-    <mat-card-subtitle><uxg-skeleton-text animated style="width: 20%"></uxg-skeleton-text></mat-card-subtitle>
+    <mat-card-title><uxg-skeleton-text style="width:100px"></uxg-skeleton-text></mat-card-title>
+    <mat-card-subtitle><uxg-skeleton-text style="width:50px"></uxg-skeleton-text></mat-card-subtitle>
   </mat-card-header>
 
   <div class="chips">
-    <uxg-skeleton-text animated style="width: 15%"></uxg-skeleton-text>
-    <uxg-skeleton-text animated style="width: 15%"></uxg-skeleton-text>
-    <uxg-skeleton-text animated style="width: 15%"></uxg-skeleton-text>
-    <uxg-skeleton-text animated style="width: 15%"></uxg-skeleton-text>
+    <uxg-skeleton-text style="width: 15%"></uxg-skeleton-text>
+    <uxg-skeleton-text style="width: 15%"></uxg-skeleton-text>
+    <uxg-skeleton-text style="width: 15%"></uxg-skeleton-text>
+    <uxg-skeleton-text style="width: 15%"></uxg-skeleton-text>
   </div>
 
-  <uxg-skeleton-text animated></uxg-skeleton-text>
-  <uxg-skeleton-text animated></uxg-skeleton-text>
+  <uxg-skeleton-text></uxg-skeleton-text>
+  <uxg-skeleton-text></uxg-skeleton-text>
 </mat-card>
