--- a/libs/angular-theme/lib/core/style/_spacing.scss
+++ b/libs/angular-theme/lib/core/style/_spacing.scss
@@ -8,10 +8,20 @@ $uxg-spacing-3: map.get(spacing.$tokens, spacing-3) !default;
 $uxg-spacing-4: map.get(spacing.$tokens, spacing-4) !default;
 $uxg-spacing-5: map.get(spacing.$tokens, spacing-5) !default;
 $uxg-spacing-6: map.get(spacing.$tokens, spacing-6) !default;
+$uxg-spacing-7: map.get(spacing.$tokens, spacing-7) !default;
 
-@mixin styles() {
+@mixin helper-classes() {
   $sides: (top, bottom, left, right);
-  $spacings: ($uxg-spacing-0, $uxg-spacing-1, $uxg-spacing-2, $uxg-spacing-3, $uxg-spacing-4, $uxg-spacing-5, $uxg-spacing-6);
+  $spacings: (
+    $uxg-spacing-0,
+    $uxg-spacing-1,
+    $uxg-spacing-2,
+    $uxg-spacing-3,
+    $uxg-spacing-4,
+    $uxg-spacing-5,
+    $uxg-spacing-6,
+    $uxg-spacing-7
+  );
 
   @for $i from 1 through length($spacings) {
     @each $side in $sides {
