--- a/libs/angular-theme/lib/avatar/_avatar-theme.scss
+++ b/libs/angular-theme/lib/avatar/_avatar-theme.scss
@@ -1,6 +1,6 @@
 @use 'sass:map';
-@use '@finastra/fds-theme/color' as fds;
-@use '@finastra/fds-theme/typography' as typo;
+@use '@finastra/fds-theme/color' as color;
+@use '@finastra/fds-theme/typography' as typography;
 
 @mixin multiple-backgrounds($backgrounds...) {
   $multi-background: ();
@@ -12,20 +12,20 @@
   background: $multi-background;
 }
 
-@mixin color() {
+@mixin theme($theme: null) {
   $avatar-path: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cdefs%3E%3Cstyle%3E.a%7Bfill:white%7D%3C/style%3E%3C/defs%3E%3Cpath class='a' d='M12 5.2c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z'/%3E%3C/svg%3E";
   $uxg-default-avatar: url($avatar-path) center center / 120% 120% no-repeat;
 
   .uxg-avatar {
-    @include fds.color(on-gradient);
-    @include fds.background(gradient-vertical);
+    @include color.color(on-gradient);
+    @include color.background(gradient-vertical);
 
     &.uxg-primary-color {
-      @include fds.background(primary);
+      @include color.background(primary);
     }
 
     &.uxg-accent-color {
-      @include fds.background(secondary);
+      @include color.background(secondary);
     }
 
     &.uxg-gravatar {
@@ -47,7 +47,7 @@
 
   img {
     &.uxg-avatar {
-      @include fds.background(background);
+      @include color.background(background);
     }
   }
 
@@ -56,19 +56,19 @@
     > uxg-avatar {
       > .uxg-avatar {
         border: 1px solid;
-        @include fds.property(border-color, background);
+        @include color.property(border-color, background);
       }
     }
   }
 
   .uxg-avatar-number {
-    @include fds.color(on-background);
+    @include color.color(on-background);
   }
 }
 
-@mixin typography() {
+@mixin typography($config: null) {
   .uxg-avatar {
-    @include typo.typography(body-3);
+    @include typography.typography(body-3);
     font-size: 16px;
 
     &[large] {
@@ -81,12 +81,12 @@
   }
 
   .uxg-avatar-number {
-    @include typo.typography(subtitle-1);
+    @include typography.typography(subtitle-1);
   }
 
   *[large] {
     .uxg-avatar {
-      font-size: 14px;
+      font-size: 44px;
     }
   }
 
@@ -96,12 +96,7 @@
     }
 
     .uxg-avatar-number {
-      @include typo.typography(caption);
+      @include typography.typography(caption);
     }
   }
-}
-
-@mixin theme() {
-  @include color();
-  @include typography();
 }
