--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -2,29 +2,38 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-@use '../../avatar/avatar-theme';
-@use '../../badge/badge-theme';
-@use '../../button/button-theme';
-@use '../../button-toggle/button-toggle-theme';
-@use '../../breadcrumb/breadcrumb-theme';
-@use '../../card/card-theme';
-@use '../../chips/chips-theme';
-@use '../../expansion/expansion-theme';
-@use '../../form-field/form-field-theme';
-@use '../../icon/icon-theme';
-@use '../../link/link-theme';
-@use '../../list/list-theme';
-@use '../../logo/logo-theme';
-@use '../../menu/menu-theme';
-@use '../../sidenav/sidenav-theme';
-@use '../../slide-toggle/slide-toggle-theme';
-@use '../../table/table-theme';
-@use '../../tabs/tabs-theme';
-@use '../../toolbar/toolbar-theme';
-@use './color-utility';
-@use './light-css-variables';
-@use './dark-css-variables';
+@use '@finastra/fds-theme/scheme' as scheme;
+@use '@finastra/fds-theme/color/mixins' as color;
+@use '@finastra/fds-theme/typography/mixins' as typography;
 
+@use '../../avatar/avatar-theme';
+// @use '../../badge/badge-theme';
+@use '../../button/button-theme';
+// @use '../../button-toggle/button-toggle-theme';
+@use '../../breadcrumb/breadcrumb-theme';
+// @use '../../card/card-theme';
+// @use '../../chips/chips-theme';
+// @use '../../expansion/expansion-theme';
+// @use '../../form-field/form-field-theme';
+@use '../../icon/icon-theme';
+// @use '../../link/link-theme';
+// @use '../../list/list-theme';
+// @use '../../logo/logo-theme';
+// @use '../../menu/menu-theme';
+// @use '../../sidenav/sidenav-theme';
+// @use '../../slide-toggle/slide-toggle-theme';
+// @use '../../table/table-theme';
+// @use '../../tabs/tabs-theme';
+// @use '../../toolbar/toolbar-theme';
+
+// TODO: fix
+// @use './color-utility';
+// @use './light-css-variables';
+// @use './dark-css-variables';
+
+@use './theming' as theme;
+
+// TODO: fix
 @mixin uxg-core-theme($theme) {
   $foreground: map.get($theme, foreground);
   $background: map.get($theme, background);
@@ -55,28 +64,40 @@
   @include color-utility.uxg-color-utility($theme);
 }
 
-// Create a theme.
 @mixin uxg-material-theme($theme) {
-  @include mat.all-component-themes($theme);
-  // uxg themes
-  @include uxg-core-theme($theme);
+  @if $theme == theme.$light-theme {
+    @include mat.all-component-themes($theme);
+
+    :root {
+      @include color.custom-properties(scheme.light());
+      @include typography.custom-properties();
+    }
+  } @else {
+    @include mat.all-component-colors($theme);
+
+    :root {
+      @include color.custom-properties(scheme.dark());
+    }
+  }
+
+  // @include uxg-core-theme($theme);
   @include avatar-theme.theme($theme);
-  @include badge-theme.theme($theme);
+  // @include badge-theme.theme($theme);
   @include button-theme.theme($theme);
-  @include button-toggle-theme.theme($theme);
-  @include breadcrumb-theme.theme($theme);
-  @include card-theme.theme($theme);
-  @include chips-theme.theme($theme);
-  @include expansion-theme.theme($theme);
-  @include form-field-theme.theme($theme);
+  // @include button-toggle-theme.theme($theme);
+  // @include breadcrumb-theme.theme($theme);
+  // @include card-theme.theme($theme);
+  // @include chips-theme.theme($theme);
+  // @include expansion-theme.theme($theme);
+  // @include form-field-theme.theme($theme);
   @include icon-theme.theme($theme);
-  @include link-theme.theme($theme);
-  @include list-theme.theme($theme);
-  @include logo-theme.theme($theme);
-  @include menu-theme.theme($theme);
-  @include sidenav-theme.theme($theme);
-  @include slide-toggle-theme.theme($theme);
-  @include table-theme.theme($theme);
-  @include tabs-theme.theme($theme);
-  @include toolbar-theme.theme($theme);
+  // @include link-theme.theme($theme);
+  // @include list-theme.theme($theme);
+  // @include logo-theme.theme($theme);
+  // @include menu-theme.theme($theme);
+  // @include sidenav-theme.theme($theme);
+  // @include slide-toggle-theme.theme($theme);
+  // @include table-theme.theme($theme);
+  // @include tabs-theme.theme($theme);
+  // @include toolbar-theme.theme($theme);
 }
