--- a/libs/angular-theme/lib/icon/_icon-theme.scss
+++ b/libs/angular-theme/lib/icon/_icon-theme.scss
@@ -1,6 +1,6 @@
 @use '@finastra/fds-theme/color' as fds;
 
-@mixin color() {
+@mixin theme($theme: null) {
   .mat-icon[color='secondary'],
   .mat-icon.mat-secondary {
     @include fds.color(secondary);
