migration for the chips

--- a/libs/angular-theme/_base.scss
+++ b/libs/angular-theme/_base.scss
@@ -1,5 +1,6 @@
 @import './lib/avatar/avatar';
 @import './lib/button-toggle/button-toggle';
+@import './lib/chips/chips';
 @import './lib/breadcrumb/breadcrumb';
 @import './lib/button/button';
 @import './lib/icon/icon';
