--- a/libs/angular-theme/lib/chips/_chips.scss
+++ b/libs/angular-theme/lib/chips/_chips.scss
@@ -1,49 +1,49 @@
 @use '../core/style/spacing' as *;
-@use '../icon/icon-base' as *;
+@use '../icon/icon' as *;
 
-$chip-min-height-dense: 18px;
+$chip-height-dense: 18px;
 $chip-icon-size-dense: 14px;
 $chip-remove-icon-size-dense: 14px;
 
-$chip-min-height: 24px;
+$chip-height: 24px;
 $chip-icon-size: 18px;
 $chip-remove-icon-size: 14px;
 
-$chip-min-height-large: 32px;
+$chip-height-large: 32px;
 $chip-icon-size-large: 24px;
 $chip-remove-icon-size-large: 18px;
 
-.mat-chip.mat-standard-chip {
-  min-height: $chip-min-height;
+.mat-mdc-chip.mat-mdc-standard-chip {
+  height: $chip-height;
 
-  .mat-chip-avatar {
+  .mat-mdc-chip-avatar {
     @include icon-size($chip-icon-size);
   }
 
-  .mat-chip-remove.mat-icon {
+  .mat-mdc-chip-remove.mat-icon {
     @include icon-size($chip-remove-icon-size);
   }
 
   &[dense] {
-    min-height: $chip-min-height-dense;
+    height: $chip-height-dense;
 
-    .mat-chip-avatar {
+    .mat-mdc-chip-avatar {
       @include icon-size($chip-icon-size-dense);
     }
 
-    .mat-chip-remove.mat-icon {
+    .mat-mdc-chip-remove.mat-icon {
       @include icon-size($chip-remove-icon-size-dense);
     }
   }
 
   &[large] {
-    min-height: $chip-min-height-large;
+    height: $chip-height-large;
 
-    .mat-chip-avatar {
+    .mat-mdc-chip-avatar {
       @include icon-size($chip-icon-size-large);
     }
 
-    .mat-chip-remove.mat-icon {
+    .mat-mdc-chip-remove.mat-icon {
       @include icon-size($chip-remove-icon-size-large);
     }
   }
